Removed Helvetica - font chosen by browser in this style caused alignment issues.

--- a/app/styles/_app.scss
+++ b/app/styles/_app.scss
@@ -32,7 +32,7 @@ body {
     margin: 0;
     padding: 0;
     font-size: var(--fs-default);
-    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    font-family: "Roboto", "Arial", sans-serif;
 }
 
 main {
